API documentation built for user endpoints

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "MERN shopping cart app",
   "apidoc": {
-    "title": "ecommerce-template Documentation",
+    "title": "API Docs",
     "url": "",
     "version": "1.0.0",
     "sampleUrl": null
@@ -18,7 +18,7 @@
     "data:import": "node backend/seeder",
     "data:destroy": "node backend/seeder -d",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend",
-    "docs": "rm -r backend/apidoc; apidoc -i /home/tom/Desktop/ecommerce-template/backend/controllers/ -o backend/apidoc/"
+    "docs": "rm -r backend/apidoc; apidoc -i /home/tom/Desktop/ecommerce-template/backend/controllers/ -o apidoc/"
   },
   "repository": {
     "type": "git",
