--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2",
-    "multer-s3": "^2.9.0"
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "concurrently": "^6.2.0",
